# husky_ros2

./: .gitignore  .gitmodules
.docker/: Dockerfile  build_image.sh  entrypoint.bash  run_user.sh  run_user_nvidia.sh  setup.bash
husky_commander/: package.xml  setup.cfg  setup.py
husky_commander/config/husky_basic/: robot.srdf  robot.srdf.xacro  robot.yaml
husky_commander/config/husky_basic/manipulators/config/: moveit.yaml
husky_commander/config/husky_basic/platform/launch/: platform-service.launch.py
husky_commander/config/husky_manipulator/: robot.srdf  robot.srdf.xacro  robot.urdf.xacro  robot.yaml
husky_commander/config/husky_manipulator/manipulators/config/: moveit.yaml
husky_commander/config/husky_manipulator/platform/config/: control.yaml
husky_commander/config/husky_manipulator/platform/launch/: platform-service.launch.py
husky_commander/launch/: husky_simulation.launch.py
husky_commander/scripts/: husky_command.ipynb  husky_command.py
ur_commander/: CMakeLists.txt  package.xml
ur_commander/config/: rivz2_config.rviz
ur_commander/launch/: iaac_ur10e.launch.py
ur_commander/scripts/: sequence.py  sequence_action.py  test.ipynb  test_sequence.py
ur_commander/src/ur_commander/: visualize_pose_srv.py
